[package]
name = "tendermint-kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = { version = "1.0", default-features = false }
tendermint-proto = { version = "0.34.0", default-features = false }
tendermint-abci = "0.34.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"